--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a href="#">Головна</a></li>
-            <li><a href="#">Про нас</a></li>
-            <li><a href="#">Послуги</a></li>
-            <li><a href="#">Контакти</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </div>
     <div class="header">
         <img src="img/image_header.jpg" alt="Header image">
     </div>
     <div class="content">
-        <h1>Вітаємо у нашому блозі</h1>
-        <p>Це простий сайт, створений як навчальний проєкт з інформатики.</p>
+        <h1>Welcome to our blog</h1>
     </div>
 </body>
 </html>
