--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="menu">
+    <nav class="menu">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
