--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-    </div>
-    <div class="header">
-        <img src="img/image_header.jpg" alt="Header image">
-    </div>
+    </nav>
+    <header></header>
     <div class="content">
         <h1>Welcome to our blog</h1>
     </div>
