--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   
     <title>Blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <header></header>
-    <div class="content">
-        <h1>Welcome to our blog</h1>
+   <nav>
+    <div class="container navigation">
+        <div class="logo">Blog</div>
+        <div class="menu">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">New Post</a>
+                </li>
+                <li>
+                    <a href="#"> About</a>                
+                </li>
+            </ul>
+        </div>
     </div>
+   </nav>
+
+
+   <header>
+     <div class="container2">
+          <div class="content-center">
+            <h1>Hello! This is my first blog.</h1>
+          </div>
+     </div>
+ </header>
+
+
 </body>
 </html>
