--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <header>
      <div class="container2">
           <div class="content-center">
-            <h1>Hello! This is my blog.</h1>
+            <h1>Hello! This is my first blog.</h1>
           </div>
      </div>
  </header>
