--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <meta charset="UTF-8">
     <title>Blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,29 +11,18 @@
         <div class="logo">Blog</div>
         <div class="menu">
             <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">New Post</a>
-                </li>
-                <li>
-                    <a href="#"> About</a>                
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">New Post</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
     </div>
    </nav>
 
-
    <header>
      <div class="container2">
-          <div class="content-center">
-            <h1>Hello! This is my first blog.</h1>
-          </div>
+        <h1>Hello! This is my first blog.</h1>
      </div>
- </header>
-
-
+   </header>
 </body>
 </html>
